updatd readme and index

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div id="row row1">
         <button id="reset" onclick="clearscr()">C</button>
         <button id="zero" onclick="print0()">0</button>
-        <button id="minus" onclick="Minus()">-</button>
-        <button id="divide" onclick="Divide()">/</button>
+        <button id="minus" onclick="minus()">-</button>
+        <button id="divide" onclick="divide()">/</button>
     </div>
     <div id="row row2">
         <button id="seven" onclick="print7()">7</button>
