updated index, css and js file
Fixes:
1. all buttons functional
2. Resolved double operator button click error
3. added del, dot and power button

--- a/index.html
+++ b/index.html
@@ -12,30 +12,33 @@
        
         <h1 id="title">PROFESSIONAL CALCULATOR</h1>
    <div id="screen">
-0
+OFF
    </div>
     <div id="row row1">
-        <button id="reset" onclick="clearscr()">C</button>
-        <button id="zero" onclick="print0()">0</button>
-        <button id="minus" onclick="minus()">-</button>
-        <button id="divide" onclick="divide()">/</button>
-    </div>
-    <div id="row row2">
-        <button id="seven" onclick="print7()">7</button>
-        <button id="eight" onclick="print8()">8</button>
-        <button id="nine" onclick="print9()">9</button>
+        <button id="power" onclick="power()">On / Off</button>
+        <button id="reset" onclick="clearScr()">C</button>
+        <button id="del" onclick="delFunc()">del</button>
         <button id="times" onclick="times()">x</button>
     </div>
+    <div id="row row2">
+        <button id="nine" onclick="print9()">9</button>
+        <button id="zero" onclick="print0()">0</button>
+        <button id="dot" onclick="printDot()">.</button>
+        <button id="divide" onclick="divide()">/</button>
+        <button id="minus" onclick="minus()">-</button>
+    </div>
     <div id="row row3">
-        <button id="four" onclick="print4()">4</button>
         <button id="five" onclick="print5()">5</button>
         <button id="six" onclick="print6()">6</button>
+        <button id="seven" onclick="print7()">7</button>
+        <button id="eight" onclick="print8()">8</button>
         <button id="plus" onclick="add()">+</button>
     </div>
     <div id="row row4">
         <button id="one" onclick="print1()">1</button>
         <button id="two" onclick="print2()">2</button>
         <button id="three" onclick="print3()">3</button>
+        <button id="four" onclick="print4()">4</button>
         <button id="equal" onclick="answer()">=</button>
     </div>
     </div>
